# QT_DEMO

./: README.md
qt_demo_1/: README.txt  main.cpp
qt_demo_2/: CMakeLists.txt  README.txt  main.cpp
qt_demo_3/: CMakeLists.txt  README.txt  main.cpp
qt_demo_4/: CMakeLists.txt  README.txt
qt_demo_4/include/: secondwindow.h
qt_demo_4/src/: main.cpp  secondwindow.cpp
qt_opencv_demo/: CMakeLists.txt  README.txt
qt_opencv_demo/include/: mainwindow.h
qt_opencv_demo/src/: main.cpp  mainwindow.cpp
